--- a/index.html
+++ b/index.html
@@ -4,7 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Random Color Generator</title>
-    
+    <link rel="stylesheet" href="style.css">
+    <!--these divs below will have the randomly generated color codes that we will use to populate our website-->
+    <h1>Random Color Generator</h1>
+    <div class="container">
+        <div class="color-container">
+            #7652a6
+        </div>
+        <div class="color-container">
+            #7652a6
+        </div>
+        <div class="color-container">
+            #7652a6
+        </div>
+        <div class="color-container">
+            #7652a6
+        </div>
+
+    </div>
 </head>
 <body>
     
